Warnings solving (optimizations)